Remote video stream startin began implementation