@@ -1,17 +1,34 @@
-FROM ubuntu:18.04
-MAINTAINER Zdenek Klar <zdeneki.klar@gmail.com>
+FROM alpine:latest as packager
 
 RUN mkdir /info
 RUN date >/info/build_date.txt
 
-# Update system and install base dependencies
-RUN apt-get update && apt-get upgrade -y && apt-get install curl git wget jq -y
+RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
 
-RUN apt-get install nano -y
+ENV JAVA_MINIMAL="/opt/java-minimal"
 
-RUN apt-get install ffmpeg -y
+# build minimal JRE
+RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
+    --verbose \
+    --add-modules \
+        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+    --compress 2 --strip-debug --no-header-files --no-man-pages \
+    --release-info="add:IMPLEMENTOR=radistao:IMPLEMENTOR_VERSION=radistao_JRE" \
+    --output "$JAVA_MINIMAL"
 
-RUN apt-get install default-jdk -y
+FROM alpine:latest
+
+
+
+ENV JAVA_HOME=/opt/java-minimal
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
+
+RUN apk --no-cache add nano
+
+RUN apk --no-cache add ffmpeg
+
 
 ENV PROPERTIES_PATH src/main/resources/application.properties
 COPY build/libs/springmvcdemo-1.0.1.jar /var/app.jar
@@ -22,3 +39,7 @@ copy etc/*.* /etc/
 EXPOSE 9999
 
 ENTRYPOINT java -jar /var/app.jar --spring.config.location=/cfg/application.properties
+
+
+
+
